# tclone

./: .gitignore  README.md  config.yml  main.py  pyproject.toml  requirements.txt  tclone.py
src/: analyzer.py  cli.py  clonner.py  config.py  forward.py  runtime.py  session.py
src/tclone/: analyzer.py  cli.py  clonner.py  config.py  forward.py
