[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tclone"
version = "0.2.0"
description = "Minimal Telegram message clone tool built on Telethon"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "GPL-3.0"}
authors = [
  { name = "Snow" },
]
dependencies = [
  "telethon==1.34.0",
  "pyyaml==6.0.3",
  "pillow==10.3.0",
  "python-dotenv==1.2.1",
]

[project.urls]
Homepage = "https://github.com/snwkkj/tclone"
Repository = "https://github.com/snwkkj/tclone"
Issues = "https://github.com/snwkkj/tclone/issues"

[project.scripts]
tclone = "cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["analyzer", "cli", "clonner", "config", "forward", "runtime", "session"]
